# grpc_mock_server

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config_template.xml  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
grpc_mock_server_common/: CMakeLists.txt  grpc_mock_server_configuration.cc  grpc_mock_server_configuration.h  grpc_mock_server_message_wrapper.cc  grpc_mock_server_message_wrapper.h  grpc_mock_server_utils.h
grpc_mock_server_common_test/: CMakeLists.txt  test.cpp
grpc_mock_server_common_test/assets/: config.xml
grpc_mock_server_executable/: CMakeLists.txt
grpc_mock_server_executable/src/: main.cc
grpc_mock_server_library/: CMakeLists.txt  generate.py  helpers.cmake
grpc_mock_server_library/src/: business_logic.cc  business_logic.h  database_logger.cc  grpc_mock_server_library.cpp  grpc_mock_server_library.h  pem_certificate_download.cc
grpc_mock_server_plugin/: CMakeLists.txt
grpc_mock_server_plugin/templates/: stub_source_server_method_bidi_streaming.txt  stub_source_server_method_client_only_streaming.txt  stub_source_server_method_no_streaming.txt  stub_source_server_method_server_only_streaming.txt
